# Solitaire-2.0

./: CMakeLists.txt  README.md
Code/: CMakeLists.txt  main.cpp
Code/Algos/: Board.cpp  Button.cpp  Column.cpp  Deck.cpp  Game.cpp  Lobby.cpp  Menu.cpp  Pointer.cpp  Stack.cpp
Code/Include/: Board.hpp  Button.hpp  Card.hpp  Game.hpp  Lobby.hpp  LobbyExitCodes.hpp  Menu.hpp  Pointer.hpp  UI.hpp
Code/UI/: UI.cpp
